tests/neg-macros/quoted-pattern-with-type-params-regression.check
-- Error: tests/neg-macros/quoted-pattern-with-type-params-regression.scala:8:31 ---------------------------------------
8 |    case '{ [A] => (x : A) => $b[A] : (A => A) } => ??? // error
  |                               ^
  |                               Type must be fully defined.
  |                               Consider annotating the splice using a type ascription:
  |                                 (${b}: XYZ).
-- Error: tests/neg-macros/quoted-pattern-with-type-params-regression.scala:9:33 ---------------------------------------
9 |    case '{ [A] => (x : A) => $b(x) : (A => A) } => ??? // error
  |                                 ^
  |                                Type variables that this argument depends on are not captured in this hoas pattern
-- Error: tests/neg-macros/quoted-pattern-with-type-params-regression.scala:10:24 --------------------------------------
10 |    case '{ (a:Int) => $b[Int](a) : String } => ??? // error
   |                        ^
   |                        Type must be fully defined.
   |                        Consider annotating the splice using a type ascription:
   |                          (${b}: XYZ).
